--- a/outils/glisse-nombre-portable.html
+++ b/outils/glisse-nombre-portable.html
@@ -13,6 +13,7 @@
 
     *{box-sizing:border-box}
     html,body{height:100%}
+    html{ -webkit-text-size-adjust:100%; } /* évite les zooms/resize auto iOS */
     body{
       margin:0;
       font:20px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Arial;
@@ -29,6 +30,8 @@
     .app{
       width:min(1200px,100%);
       overflow-x:auto; /* sécurité si ça déborde */
+      -webkit-overflow-scrolling: touch; /* inertie iOS */
+      overscroll-behavior: contain;
     }
 
     .card{
@@ -43,23 +46,22 @@
       display:flex; flex-wrap:wrap; gap:8px; align-items:center
     }
 
-    /* Boutons */
+    /* Boutons / contrôles : 16px mini => empêche le zoom iOS */
     .btn{
       border:1.5px solid #444;
       background:#f2f2f2;
       border-radius:12px;
       padding:8px 12px;
-      font-size:clamp(14px, 2.8vw, 18px);
+      font-size: clamp(16px, 2.8vw, 18px);
       font-weight:700;
       cursor:pointer; line-height:1
     }
     .btn.primary{background:#2563eb; color:#fff; border-color:#2563eb}
 
-    /* Segments */
     .seg{display:flex; border:1.5px solid #444; border-radius:12px; overflow:hidden}
     .seg button{
       padding:8px 12px; font-weight:700; border:0; background:#e9e9e9; cursor:pointer;
-      font-size:clamp(13px, 2.6vw, 16px);
+      font-size: clamp(16px, 2.6vw, 18px);
     }
     .seg button+button{border-left:1.5px solid #444}
     .seg .active{background:#0ea5e9; color:#fff}
@@ -71,7 +73,8 @@
       gap:var(--gap);
       justify-content:center;
       margin-top:12px;
-      min-width: calc(12*var(--cell) + 11*var(--gap)); /* sécurité scroll */
+      /* +2px de marge pour éviter le pile-poil qui fait sauter une colonne */
+      min-width: calc(12*var(--cell) + 11*var(--gap) + 2px);
     }
     .head{
       height:var(--headH); text-align:center; font-weight:800; background:#ececec;
@@ -95,14 +98,16 @@
 
     .digit{
       width:100%; height:100%; border:0; outline:none; background:transparent; text-align:center;
-      font: 800 clamp(14px, calc(var(--cell)*0.40), 30px)/1 system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      /* mini 16px pour empêcher le zoom iOS */
+      font: 800 clamp(16px, calc(var(--cell)*0.40), 30px)/1 system-ui,-apple-system,Segoe UI,Roboto,Arial;
       caret-color:#2563eb
     }
     .digit::placeholder{color:#bfbfbf}
+    button, input, select { font-size:16px; touch-action:manipulation; }
 
     .ghost{
       position:absolute; inset:0; display:flex; align-items:center; justify-content:center;
-      font: 800 clamp(14px, calc(var(--cell)*0.40), 30px)/1 system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      font: 800 clamp(16px, calc(var(--cell)*0.40), 30px)/1 system-ui,-apple-system,Segoe UI,Roboto,Arial;
       color:#000; pointer-events:none
     }
 
@@ -114,17 +119,22 @@
       caret-color:#2563eb;
     }
 
-    /* Ajustement paysage mobile */
+    /* Ajustement paysage mobile : calcul sur vmin pour robustesse */
     @media (orientation: landscape) and (max-width: 900px){
       :root{
         --gap: 6px;
-        --cell: clamp(30px, calc((100vw - 20px - 11*var(--gap)) / 12), 72px);
+        --cell: clamp(28px, calc((100vmin - 20px - 11*var(--gap)) / 12), 68px);
       }
     }
 
     @media (max-width:420px){
       .btn, .seg button{ padding:6px 9px }
       .head .lbl{ line-height:1.0; letter-spacing:0 }
+    }
+
+    /* Apparence compacte des libellés (quand activée par JS) */
+    .compact .head .lbl{
+      font-size: clamp(10px, calc(var(--cell)*0.14), 11px);
     }
   </style>
 </head>
@@ -136,7 +146,7 @@
         <button class="btn" id="resetBtn" type="button">Réinitialiser</button>
         <button class="btn" id="times10" type="button">×10</button>
         <button class="btn" id="div10" type="button">÷10</button>
-        <div class="seg" id="zerosSeg">
+        <div class="seg" id="zerosSeg" role="group" aria-label="Affichage des zéros">
           <button data-mode="none" class="active" type="button">Zéros : Aucun</button>
           <button data-mode="needed" type="button">Zéros : Nécessaires</button>
           <button data-mode="all" type="button">Zéros : Partout</button>
@@ -146,31 +156,33 @@
 
       <section class="card" style="z-index:1;">
         <div class="grid" id="grid">
-          <div class="head"><div class="lbl"><span>Centaines</span><span>de milliers</span></div></div>
-          <div class="head"><div class="lbl"><span>Dizaines</span><span>de milliers</span></div></div>
-          <div class="head"><div class="lbl"><span>Milliers</span></div></div>
-          <div class="head"><div class="lbl"><span>Centaines</span></div></div>
-          <div class="head"><div class="lbl"><span>Dizaines</span></div></div>
-          <div class="head"><div class="lbl"><span>Unités</span></div></div>
-          <div class="head"><div class="lbl"><span>,</span></div></div>
-          <div class="head"><div class="lbl"><span>Dixièmes</span></div></div>
-          <div class="head"><div class="lbl"><span>Centièmes</span></div></div>
-          <div class="head"><div class="lbl"><span>Millièmes</span></div></div>
-          <div class="head"><div class="lbl"><span>Dix</span><span>millièmes</span></div></div>
-          <div class="head"><div class="lbl"><span>Cent</span><span>millièmes</span></div></div>
+          <!-- En-têtes -->
+          <div class="head" data-col="0"><div class="lbl"><span>Centaines</span><span>de milliers</span></div></div>
+          <div class="head" data-col="1"><div class="lbl"><span>Dizaines</span><span>de milliers</span></div></div>
+          <div class="head" data-col="2"><div class="lbl"><span>Milliers</span></div></div>
+          <div class="head" data-col="3"><div class="lbl"><span>Centaines</span></div></div>
+          <div class="head" data-col="4"><div class="lbl"><span>Dizaines</span></div></div>
+          <div class="head" data-col="5"><div class="lbl"><span>Unités</span></div></div>
+          <div class="head" data-col="6"><div class="lbl"><span>,</span></div></div>
+          <div class="head" data-col="7"><div class="lbl"><span>Dixièmes</span></div></div>
+          <div class="head" data-col="8"><div class="lbl"><span>Centièmes</span></div></div>
+          <div class="head" data-col="9"><div class="lbl"><span>Millièmes</span></div></div>
+          <div class="head" data-col="10"><div class="lbl"><span>Dix</span><span>millièmes</span></div></div>
+          <div class="head" data-col="11"><div class="lbl"><span>Cent</span><span>millièmes</span></div></div>
 
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c00" name="d00" autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c0"  name="d0"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c1"  name="d1"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c2"  name="d2"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c3"  name="d3"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c4"  name="d4"  autocomplete="off" /></div>
-          <div class="cell comma"><span>,</span></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c6"  name="d6"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c7"  name="d7"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c8"  name="d8"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c9"  name="d9"  autocomplete="off" /></div>
-          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c10" name="d10" autocomplete="off" /></div>
+          <!-- Entrées -->
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c00" name="d00" autocomplete="off" aria-label="Centaines de milliers" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c0"  name="d0"  autocomplete="off" aria-label="Dizaines de milliers" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c1"  name="d1"  autocomplete="off" aria-label="Milliers" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c2"  name="d2"  autocomplete="off" aria-label="Centaines" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c3"  name="d3"  autocomplete="off" aria-label="Dizaines" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c4"  name="d4"  autocomplete="off" aria-label="Unités" /></div>
+          <div class="cell comma" aria-hidden="true"><span>,</span></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c6"  name="d6"  autocomplete="off" aria-label="Dixièmes" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c7"  name="d7"  autocomplete="off" aria-label="Centièmes" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c8"  name="d8"  autocomplete="off" aria-label="Millièmes" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c9"  name="d9"  autocomplete="off" aria-label="Dix millièmes" /></div>
+          <div class="cell"><input class="digit" maxlength="1" inputmode="numeric" id="c10" name="d10" autocomplete="off" aria-label="Cent millièmes" /></div>
         </div>
         <div id="status">×1</div>
       </section>
@@ -192,14 +204,16 @@
     const div10=document.getElementById('div10');
     const exitZerosBtn=document.getElementById('exitZerosBtn');
     const status=document.getElementById('status');
+    const grid=document.getElementById('grid');
 
     // État
     let zeroMode='none'; // 'none' | 'needed' | 'all'
     let exp10=0;         // cumul ×10/÷10
-    let exitZeros=false; // remplir les trous pendant débordement ?
+    let exitZeros=false; // remplir les trous pendant débordement ? affichage fantôme
     const leftStack=[];  // ce qui sort à gauche (×10)
     const rightStack=[]; // ce qui sort à droite (÷10)
     let overflowSide=null; // 'left' | 'right' | null
+    let compact=false;     // libellés compacts auto < 420px
 
     // Helpers
     function sanitizeToDigit(v){ const m=(v||'').toString().match(/[0-9]/); return m?m[0]:''; }
@@ -213,6 +227,53 @@
     function readRaw(){ const a=new Array(ids.length).fill(''); for(const i of order){ a[i]=document.getElementById(ids[i]).value; } return a; }
     function writeRaw(arr){ for(const i of order){ document.getElementById(ids[i]).value=arr[i]||''; } }
     function clearGhosts(){ document.querySelectorAll('.cell .ghost').forEach(g=>g.remove()); }
+
+    // Libellés: normal vs compact
+    const labelsNormal = [
+      ['Centaines','de milliers'],
+      ['Dizaines','de milliers'],
+      ['Milliers'],
+      ['Centaines'],
+      ['Dizaines'],
+      ['Unités'],
+      [','],
+      ['Dixièmes'],
+      ['Centièmes'],
+      ['Millièmes'],
+      ['Dix','millièmes'],
+      ['Cent','millièmes']
+    ];
+    const labelsCompact = [
+      ['Cent.','de mill.'],
+      ['Diz.','de mill.'],
+      ['Milliers'],
+      ['Cent.'],
+      ['Diz.'],
+      ['Unités'],
+      [','],
+      ['Dixièmes'],
+      ['Centièmes'],
+      ['Millièmes'],
+      ['Dix','mill.'],
+      ['Cent','mill.']
+    ];
+    function renderLabels(useCompact){
+      document.querySelectorAll('.head').forEach((head, idx)=>{
+        const lbl = head.querySelector('.lbl');
+        const set = useCompact ? labelsCompact : labelsNormal;
+        const parts = set[idx] || [''];
+        lbl.innerHTML = parts.map(t=>`<span>${t}</span>`).join('');
+      });
+      grid.classList.toggle('compact', !!useCompact);
+    }
+    function autoCompact(){
+      const w = Math.min(window.innerWidth, document.documentElement.clientWidth || window.innerWidth);
+      const should = w < 420;
+      if(should !== compact){
+        compact = should;
+        renderLabels(compact);
+      }
+    }
 
     // Zéros d'affichage
     function applyZeroMode(){
@@ -260,7 +321,7 @@
         const lost=prev[first]; if(lost!=='') leftStack.push(lost);
         for(const i of orderLinear){
           const nxt=(i+1===COMMA)?COMMA+1:(i+1);
-          next[i]=(nxt<ids.length)?prev[nxt]:'';
+          next[i]=(nxt<ids.length)?prev[nxt]:''; // décale vers la gauche (×10)
         }
         if(rightStack.length){ next[last]=rightStack.pop(); }
       } else {
@@ -269,7 +330,7 @@
         for(let k=orderLinear.length-1;k>=0;k--){
           const i=orderLinear[k];
           const prv=(i-1===COMMA)?UNITS:(i-1);
-          next[i]=(prv>=0)?prev[prv]:'';
+          next[i]=(prv>=0)?prev[prv]:''; // décale vers la droite (÷10)
         }
         if(leftStack.length){ next[first]=leftStack.pop(); }
       }
@@ -294,7 +355,9 @@
       zerosSeg.querySelector('[data-mode="none"]').classList.add('active');
       exp10=0; overflowSide=null; leftStack.length=0; rightStack.length=0;
       updateStatus();
-      inputs[0].focus();
+      // focus seulement si non tactile (évite l'ouverture du clavier + décalages en paysage)
+      const isTouch = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+      if(!isTouch) { inputs[0].focus(); }
     }
 
     function updateStatus(){
@@ -349,7 +412,15 @@
 
     // Init
     updateStatus();
-    inputs[0].focus();
+    // Évite l'autofocus sur mobile (clavier qui s'ouvre au chargement)
+    const isTouch = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+    if(!isTouch) { inputs[0].focus(); }
+
+    // Labels responsives
+    renderLabels(false);
+    autoCompact();
+    window.addEventListener('resize', autoCompact);
+    window.addEventListener('orientationchange', ()=>setTimeout(autoCompact, 50));
   </script>
 </body>
 </html>
